--- a/templates/helpers/_fields.twig
+++ b/templates/helpers/_fields.twig
@@ -21,7 +21,7 @@
 
 {% block sub_fields %}
     {# SECTION 1: INITIALIZATION #}
-    {%- spaceless %}
+    {%- apply spaceless %}
         {# Set up the array of fieldnames that should be iterated. We do this by looping
            over _all_ the fields, and skipping those in the 'omittedkeys' array. #}
         {% set omittedkeys = [ 'id', 'slug', 'datecreated', 'datechanged', 'datepublish',
@@ -37,7 +37,7 @@
         {% if exclude|default is iterable %}
             {% set omittedkeys = omittedkeys|merge(exclude) %}
         {% endif %}
-    {% endspaceless -%}
+    {% endapply -%}
 
     {# SECTION 2: LOOPING AND ITERATION - The actual looping is done here. #}
     {% for field in record.fields if (field.name not in omittedkeys) %}
