Hide new passwords by default, still keeping suggestions

--- a/templates/_partials/fields/password.html.twig
+++ b/templates/_partials/fields/password.html.twig
@@ -8,6 +8,6 @@
             :label='{{ label|json_encode }}'
             :label_class='{{ label_class|default()|json_encode }}'
             :class='{{ class|json_encode }}'
-            :hidden='{{ hidden|default('false') }}'
+            :hidden='{{ hidden|default('true') }}'
         ></editor-password>
 {% endblock %}
