--- a/templates/_partials/fields/checkbox.html.twig
+++ b/templates/_partials/fields/checkbox.html.twig
@@ -3,7 +3,7 @@
 {% block field %}
     <div class="custom-control custom-checkbox">
         {# What the heck is this hidden field for, you might wonder? Well, it's
-           there to make sure an unchecked checkbox still shows up in the server
+           here to make sure an unchecked checkbox still shows up in the server
            response, so we can handle it there, if present. #}
         <input type="hidden" name="{{ name }}" value="0">
         <input class="custom-control-input" id="{{ name }}" name="{{ name }}" type="checkbox"
