--- a/public/theme/skeleton/record.twig
+++ b/public/theme/skeleton/record.twig
@@ -16,7 +16,7 @@
     {# Output all fields, in the order as defined in the content type.
        To change the generated html and configure the options, see:
        https://docs.bolt.cm/templating #}
-    {% with { 'record': record, 'common': true, 'extended': true, 'repeaters': true, 'blocks': true, 'exclude': [record|image.fieldname] } %}
+    {% with { 'record': record, 'exclude': [record|image.fieldname|default()] } %}
         {{ block('sub_fields', 'partials/_sub_fields.twig') }}
     {% endwith %}
 
