When pressing enter, save the record instead of previewing it

--- a/templates/content/edit.html.twig
+++ b/templates/content/edit.html.twig
@@ -35,6 +35,9 @@
 
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('editrecord') }}">
         <input type="hidden" name="_edit_locale" value="{{ currentlocale }}">
+        {# To prevent confusion in browsers about which submit to use when pressing 'enter', we
+        provide this _input_ here. All browsers will use this as a default. See #454 on Github. #}
+        <input type="submit" form="editcontent" style="display: none;" value="__('action.save')">
 
         {% set groups = record.definition.groups %}
 
