--- a/templates/media/edit.html.twig
+++ b/templates/media/edit.html.twig
@@ -60,8 +60,39 @@
         'value': media.originalFilename
     }  %}
 
+    <div class="media my-4">
+        {% set crop = 'crop-' ~ media.cropX|default(50) ~ '-' ~ media.cropy|default(50) ~ '-' ~ media.cropZoom|default(1.3)  %}
+        {% set thumbnail = thumbnail(image = media.filename, width = 300, height = 300, location = media.location, path = media.path, fit = crop) %}
+        <img class="mr-3" src="{{ thumbnail }}" alt="Cropping example">
 
-    <input type="submit" class="btn btn-primary" value="Save">
+        <div>
+        {% include '@bolt/_partials/fields/text.html.twig' with {
+            'label': 'field.cropX'|trans,
+            'name': 'cropX',
+            'value': media.cropX|default(50),
+            'postfix': 'field.cropXPostfix'|trans
+        }  %}
+
+        {% include '@bolt/_partials/fields/text.html.twig' with {
+            'label': 'field.cropY'|trans,
+            'name': 'cropY',
+            'value': media.cropY|default(50),
+            'postfix': 'field.cropYPostfix'|trans
+        }  %}
+
+        {% include '@bolt/_partials/fields/text.html.twig' with {
+            'label': 'field.cropZoom'|trans,
+            'name': 'cropZoom',
+            'value': media.cropZoom|default(1.3),
+            'postfix': 'field.cropZoomPostfix'|trans
+        }  %}
+        </div>
+
+
+    </div>
+
+
+    {{ macro.button('action.save', 'fa-save', 'success', {'type': 'submit', 'form': 'editcontent'}) }}
 
 </form>
 
@@ -81,8 +112,8 @@
                 </button>
 
                 <p>{{ 'label.predominant_colors__in_image'|trans }}:
-                    <ul class="ui divided selection list" id="swatcheslist">
-                    </ul>
+                    <span id="swatcheslist">
+                    </span>
                 </p>
             </div>
 
@@ -161,17 +192,15 @@
             var swatches = vibrant.swatches();
             for (var swatch in swatches) {
                 if (swatches.hasOwnProperty(swatch) && swatches[swatch]) {
-                    // <li>Vibrant <span class="badge badge-secondary" style="background-color: #94ad49">#94ad49</span></li>
+                    // <span class="…" style="… background-color: #cfdeed">LightVibrant / #cfdeed</span>
 
-                    var elem = document.createElement('li');
                     var badge = document.createElement('span');
-                    var labelNode = document.createTextNode(swatches[swatch].getHex());
+                    var labelNode = document.createTextNode(swatch + ' / ' + swatches[swatch].getHex());
                     var referenceNode = document.getElementById('swatcheslist');
-                    badge.className = "badge badge-secondary ml-2";
-                    badge.setAttribute('style', 'background-color: ' + swatches[swatch].getHex());
-                    elem.appendChild(document.createTextNode(swatch));
-                    elem.appendChild(badge).appendChild(labelNode);
-                    referenceNode.append(elem);
+                    badge.className = "badge badge-secondary my-2 py-2";
+                    badge.setAttribute('style', 'display: block; text-shadow: 1px 1px 3px #000; background-color: ' + swatches[swatch].getHex());
+                    badge.appendChild(labelNode);
+                    referenceNode.append(badge);
                 }
             }
         });
