--- a/templates/helpers/_pager_bulma.html.twig
+++ b/templates/helpers/_pager_bulma.html.twig
@@ -8,35 +8,66 @@ Predefined variables:
  - `class`: The main CSS class to apply to the pager. "pagination" by default
 
 #}
-{% if records.haveToPaginate|default() %}
 
+{% set start = max(records.currentPage - surround, 1) %}
+{% set end = min(records.currentPage + surround, records.nbPages) %}
+
+{% block item %}
+    {% if path is defined %}
+        <a href="{{ path(route, p) }}" class="{{ class }}">{{ label|default('…') }}</a>
+    {% elseif enabled is defined and enabled == false %}
+        <a class="{{ class }}" disabled>{{ label|default('…') }}</a>
+    {% endif %}
+{% endblock item %}
+
+{% if records.haveToPaginate|default() %}
     <nav class="pagination {{ class != 'pagination' ? class }}" role="navigation" aria-label="pagination">
 
-        {% if records.hasPreviousPage %}
-            {% set p = routeParams|merge({page: records.previousPage}) %}
-            <a href="{{ path(route, p) }}" class="pagination-previous">Previous</a>
-        {% else %}
-            <a class="pagination-previous" disabled>Previous</a>
-        {% endif %}
+        {# Previous Button #}
+        {% set p = routeParams|merge({page: records.hasPreviousPage ? records.previousPage : 1 }) %}
+        {% with {'path': path(route, p), 'label': 'Previous', 'enabled': records.hasPreviousPage, 'class': 'pagination-previous' } %}
+            {{ block('item') }}
+        {% endwith %}
 
-        {% if records.hasNextPage %}
-            {% set p = routeParams|merge({page: records.nextPage}) %}
-            <a href="{{ path(route, p) }}" class="pagination-next">Next page</a>
-        {% else %}
-            <a class="pagination-next" disabled>Next page</a>
-        {% endif %}
+        {# Next Button #}
+        {% set p = routeParams|merge({page: records.hasNextPage ? records.nextPage : records.nbPages }) %}
+        {% with {'path': path(route, p), 'label': 'Next', 'enabled': records.hasNextPage, 'class': 'pagination-next' } %}
+            {{ block('item') }}
+        {% endwith %}
 
         <ul class="pagination-list">
-            {% for i in 1 .. records.nbPages %}
-                <li>
-                {% if i == records.currentPage %}
-                    <a class="pagination-link is-current" aria-label="Page {{ i }}" aria-current="page">{{ i }}</a>
-                {% else %}
-                    {% set p = routeParams|merge({page: i}) %}
-                    <a href="{{ path(route, p) }}" class="pagination-link" aria-label="Goto page {{ i }}">{{ i }}</a>
-                {% endif %}
-                </li>
+
+            {# If we didn't start at the beginning, add a link to the first. #}
+            {% if start > 1 %}
+                {% set p = routeParams|merge({page: 1}) %}
+                {% with {'path': path(route, p), 'label': 1, class: 'pagination-link' } %}
+                    {{ block('item') }}
+                {% endwith %}
+                {% with { 'label': '…', 'enabled': false, class: 'pagination-link' } %}
+                    {{ block('item') }}
+                {% endwith %}
+            {% endif %}
+
+            {# Iterate over the items. #}
+            {% for i in start .. end %}
+                {% set p = routeParams|merge({page: i}) %}
+                {% set class = 'pagination-link' ~ (i == records.currentPage ? ' is-current') %}
+                {% with {'path': path(route, p), 'label': i, 'class': class } %}
+                    {{ block('item') }}
+                {% endwith %}
             {% endfor %}
+
+            {# If we didn't finish with the last, add a link to the end #}
+            {% if end < records.nbPages %}
+                {% with { 'label': '…', 'enabled': false  } %}
+                    {{ block('item') }}
+                {% endwith %}
+                {% set p = routeParams|merge({page: records.nbPages}) %}
+                {% with {'path': path(route, p), 'label': records.nbPages } %}
+                    {{ block('item') }}
+                {% endwith %}
+            {% endif %}
+
         </ul>
     </nav>
 
