--- a/templates/_base/layout_blank.html.twig
+++ b/templates/_base/layout_blank.html.twig
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html {% if block('html_id') %}id="{% block html_id %}{% endblock %}"{% endif %}>
+<html {% if block('html_id') %}id="{% block html_id %}{% endblock %}"{% endif %}
+{% if block('html_class') %}class="{% block html_class %}{% endblock %}"{% endif %}>
 
 <head>
     <meta charset="utf-8">
