--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -6,12 +6,15 @@
 
 {% block html_id 'login' %}
 
+{% block html_class %}
+    {% if not config.get('general/omit_backgrounds') %}with-background{% endif %}
+{% endblock %}
+
 {% block javascripts %}
     {{ parent() }}
 {% endblock %}
 
 {% block main %}
-
     <div>
 
         <div>
