Updating Profile edit screen too

--- a/templates/users/edit.html.twig
+++ b/templates/users/edit.html.twig
@@ -113,7 +113,7 @@
 {% endblock %}
 
 {% block aside %}
-    <div id="metadata">
+    <div id="metadata" class="d-none d-xl-block">
         <form class="ui form">
             <div class="card mb-3">
                 <div class="card-body">
@@ -122,7 +122,6 @@
             </div>
         </form>
     </div>
-
 {% endblock %}
 
 {% block javascripts %}
