--- a/public/theme/skeleton/custom/setcontent_1.twig
+++ b/public/theme/skeleton/custom/setcontent_1.twig
@@ -1,26 +1,67 @@
 {% extends 'partials/_master.twig' %}
 
+{% macro isbigger(a, b) %}
+    {% if a >= b %}== yes =={% else %}== no =={% endif %}
+{% endmacro %}
+
+{% macro issmaller(a, b) %}
+    {% if a <= b or (b == null) %}== yes =={% else %}== no =={% endif %}
+{% endmacro %}
+
 {% block main %}
 
-    <h1>One </h1>
-    {% setcontent entries = "entries/latest/4"  %}
-    {{ dump(entries) }}
-    {% for entry in entries %}
-        <li>{{ entry.contenttype }} {{ entry.id }} . {{ entry|title }}</li>
-    {% endfor %}
+    <section id="one">
+        <h1>One </h1>
+        {% setcontent entries = "entries/latest/4"  %}
+        {{ dump(entries) }}
+        {% for entry in entries %}
+            <li>
+                {{ entry.contenttype }} {{ entry.id }} . {{ entry|title }}
+                <span class="s{{ loop.index }}">{{ _self.issmaller(entry.id, last|default()) }}</span>
+            </li>
+            {% set last = entry.id %}
+        {% endfor %}
+    <section>
 
-    <h1>Two </h1>
-    {% setcontent pages = "pages" %}
-    {{ dump(pages) }}
-    {% for page in pages %}
-        <li>{{ page.contenttype }} {{ page.id }} . {{ page|title }}</li>
-    {% endfor %}
+    {# If there are more records than will fit on one page, the pager is shown. #}
+    {{ pager(entries, template = 'partials/_sub_pager.twig') }}
+
+    <section id="two">
+        <h1>Two </h1>
+        {% setcontent pages = "pages" %}
+        {{ dump(pages) }}
+        {% for page in pages %}
+            <li>
+                {{ page.contenttype }} {{ page.id }} . {{ page|title }}
+                <span class="s{{ loop.index }}">{{ _self.isbigger(page.id, last|default()) }}<span></span>
+            </li>
+            {% set last = page.id %}
+        {% endfor %}
+    </section>
+
 
     {# If there are more records than will fit on one page, the pager is shown. #}
     {{ pager(pages, template = 'partials/_sub_pager.twig') }}
 
-    <h1>Three </h1>
-    {% setcontent pagethis = "entries" where {'id': 31} returnsingle %}
-    {{ dump(pagethis) }}
+    <section id="three">
+        <h1>Three </h1>
+        {% setcontent pagetwo = "pages" where {'id': 2 } returnsingle %}
+            <span class="s1">{{ pagetwo.id }}</span>
+            <span class="s2">{{ pagetwo.status }}</span>
+        {{ dump(pagetwo) }}
+    </section>
+
+    <section id="four">
+        <h1>Four</h1>
+        {% setcontent pages = "pages" orderby 'title' %}
+        {{ dump(pages) }}
+        {% for page in pages %}
+            <li>
+                {{ page.contenttype }} {{ page.id }} . {{ page|title }}
+                <span class="s{{ loop.index }}">{{ _self.isbigger(page.id, last|default()) }}<span></span>
+            </li>
+            {% set last = page.id %}
+        {% endfor %}
+    </section>
 
 {% endblock main %}
