--- a/public/theme/skeleton/custom/setcontent_1.twig
+++ b/public/theme/skeleton/custom/setcontent_1.twig
@@ -11,8 +11,8 @@
 {% block main %}
 
     <section id="one">
-        <h1>One </h1>
-        {% setcontent entries = "entries/latest/4"  %}
+        <h1>One</h1>
+        {% setcontent entries = "entries/latest/4" printquery  %}
         {{ dump(entries) }}
         {% for entry in entries %}
             <li>
@@ -23,12 +23,12 @@
         {% endfor %}
     <section>
 
-    {# If there are more records than will fit on one page, the pager is shown. #}
+    {# If there are more records than will fit on one page, the pager is shown.#}
     {{ pager(entries, template = 'partials/_sub_pager.twig') }}
 
     <section id="two">
-        <h1>Two </h1>
-        {% setcontent pages = "pages" %}
+        <h1>Two</h1>
+        {% setcontent pages = "pages" limit 2 %}
         {{ dump(pages) }}
         {% for page in pages %}
             <li>
@@ -40,11 +40,11 @@
     </section>
 
 
-    {# If there are more records than will fit on one page, the pager is shown. #}
+    {# If there are more records than will fit on one page, the pager is shown.#}
     {{ pager(pages, template = 'partials/_sub_pager.twig') }}
 
     <section id="three">
-        <h1>Three </h1>
+        <h1>Three</h1>
         {% setcontent pagetwo = "pages" where {'id': 2 } returnsingle %}
             <span class="s1">{{ pagetwo.id }}</span>
             <span class="s2">{{ pagetwo.status }}</span>
@@ -53,15 +53,39 @@
 
     <section id="four">
         <h1>Four</h1>
-        {% setcontent pages = "pages" orderby 'title' %}
-        {{ dump(pages) }}
+        {% setcontent pages = "pages" orderby 'heading' %}
         {% for page in pages %}
             <li>
-                {{ page.contenttype }} {{ page.id }} . {{ page|title }}
-                <span class="s{{ loop.index }}">{{ _self.isbigger(page.id, last|default()) }}<span></span>
+                {{ page.contenttype }} {{ page.id }} . {{ page.heading }}
+                <span class="s{{ loop.index }}">{{ _self.isbigger(page.heading, last|default()) }}<span></span>
             </li>
-            {% set last = page.id %}
+            {% set last = page.heading %}
         {% endfor %}
     </section>
+
+    <section id="five">
+        <h1>Five</h1>
+        {% setcontent entries = "entries" limit "3"  %}
+        {% for entry in entries %}
+            <li>
+                {{ entry.contenttype }} {{ entry.id }} . {{ entry|title }}
+                <span class="s{{ loop.index }}">{{ _self.issmaller(entry.id, last|default()) }}</span>
+            </li>
+            {% set last = entry.id %}
+        {% endfor %}
+    <section>
+
+    <section id="six">
+        <h1>Six</h1>
+        {% setcontent entries = "entries" where {'title': '%consequatur%' } printquery  %}
+        {{ dump(entries) }}
+        {% for entry in entries %}
+            <li>
+                {{ entry.contenttype }} {{ entry.id }} . {{ entry|title }}
+                <span class="s{{ loop.index }}">{{ _self.issmaller(entry.id, last|default()) }}</span>
+            </li>
+            {% set last = entry.id %}
+        {% endfor %}
+    <section>
 
 {% endblock main %}
