--- a/public/theme/skeleton/custom/setcontent_1.twig
+++ b/public/theme/skeleton/custom/setcontent_1.twig
@@ -77,10 +77,10 @@
         <ul>
         {% for entry in entries %}
             <li>
-                {{ entry.contenttype }} {{ entry.id }} . {{ entry|title }}
-                <span class="s{{ loop.index }}">{{ _self.issmaller(entry.id, last|default()) }}</span>
+                {{ entry.contenttype }} {{ entry.id }} . {{ entry|title }} ( {{ entry.publishedAt|date('Y-m-d') }} )
+                <span class="s{{ loop.index }}">{{ _self.issmaller(entry.publishedAt, last|default()) }}</span>
             </li>
-            {% set last = entry.id %}
+            {% set last = entry.publishedAt %}
         {% endfor %}
         </ul>
     <section>
