--- a/assets/scss/modules/admin/_header.scss
+++ b/assets/scss/modules/admin/_header.scss
@@ -62,19 +62,27 @@
     justify-content: space-between;
     align-items: center;
     height: 100%;
-    padding: $spacer $spacer*0.625 0;
+    padding: $spacer $spacer*0.625 0; //do not just change this as it's tied to the main grid and other paddings/gutters
     position: relative;
 
     @include media-breakpoint-up(sm) {
-      padding: $spacer*1 $spacer*1 0;
+      padding: $spacer*1 $spacer*1 0; //do not just change this as it's tied to the main grid and other paddings/gutters
     }
 
     @include media-breakpoint-up(md) {
-      padding: $spacer*1.25 $spacer*1.25 0 $spacer*2.5;
+      padding: $spacer*1.25 $spacer*1.25 0 $spacer*1.25; //do not just change this as it's tied to the main grid and other paddings/gutters
+    }
+
+    @include media-breakpoint-up(xl) {
+      padding: $spacer*1.25 $spacer*1.25 0 $spacer*2; //do not just change this as it's tied to the main grid and other paddings/gutters
     }
 
     @include media-breakpoint-up(wd) {
-      padding: $spacer*1.25 $spacer*2 1rem $spacer*3.5;
+      padding: $spacer*1.25 $spacer*2 1rem $spacer*2; //do not just change this as it's tied to the main grid and other paddings/gutters
+    }
+
+    @include media-breakpoint-up(xw) {
+      padding: $spacer*1.25 $spacer*3 1rem $spacer*3; //do not just change this as it's tied to the main grid and other paddings/gutters
     }
   }
 
