redo some menu label logic to incororate sr-only content in the label and fix not showing label by default

--- a/templates/_base/layout.html.twig
+++ b/templates/_base/layout.html.twig
@@ -59,7 +59,7 @@
             </h1>
 
             <button class="admin-sidebar-toggler btn btn-md">
-                <span class="sr-only">{{ 'admin_sidebar_toggler.toggle'|trans }}</span>
+                <span class="admin-sidebar-toggler_icon"></span>{{ 'admin_sidebar_toggler.toggle'|trans|raw }}
             </button>
 
         </div>
