--- a/templates/content/listing.html.twig
+++ b/templates/content/listing.html.twig
@@ -25,14 +25,11 @@
 {# This 'topsection' gets output _before_ the main form, allowing `dump()`, without breaking Vue #}
 {% block topsection %}
 
-    {{ dump(sortBy) }}
-    {{ dump(contentType) }}
-    {{ dump(whereValues) }}
 {% endblock %}
 
 {% block main %}
 
-    {% setcontent records = 'blocks' orderby sortBy printquery where whereValues limit contentType.records_per_page %}
+    {% setcontent records = (contentType.slug) orderby (sortBy) where (whereValues) limit (contentType.records_per_page) %}
 
     <div>
         {% include '@bolt/_partials/_content_listing.html.twig' with {'records': records, 'type': contentType.slug } %}
