--- a/templates/_partials/_content_listing.html.twig
+++ b/templates/_partials/_content_listing.html.twig
@@ -34,9 +34,9 @@
     }|json_encode }}"
     ></listing-table>
 
-    <nav class="listing__filter">
-      {% include '@bolt/_partials/_pager.html.twig' with { 'records': records } %}
-    </nav>
+    <div class="listing__filter">
+        {{ pager(records, template = '@bolt/helpers/_pager_bootstrap.html.twig') }}
+    </div>
 {% else %}
 
     (no content)
